rex (0.3.0) unstable; urgency=low
  * run commands directly from command line
  * serverranges (group "backend" => "be[01..40]";)
  * ability to call tasks from other tasks
  * prepare for 0.3.0

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 22 Mar 2011 19:15:00 +0200

rex (0.2.2) unstable; urgency=low
  * (run) return command output
  * prepare for 0.2.2

 -- Jan Gehring <jan.gehring@gmail.com>  Mon, 21 Mar 2011 15:15:00 +0200

rex (0.2.1) unstable; urgency=low
  * Added pid to lock-file
  * Fixed mkdir and stat for local files.
  * prepare for 0.2.1

 -- Jan Gehring <jan.gehring@gmail.com>  Sat, 19 Feb 2011 22:30:00 +0200

rex (0.2.0) unstable; urgency=low
  * Fixed #3 (check if destination is a directory)
  * added support for parallel processing
  * renamed some FS functions
  * added stat() function
  * added is_file() function
  * added is_dir() function
  * added is_readable() function
  * added is_writable() function and an alias is_writeable()
  * Fixed #1 (no Scope::With found)
  * Fixed #2 (print help if no parameter is given)
  * added Rex::Fork::Manager to manage parallel processing
  * remove directory recursive
  * added readlink function

 -- Jan Gehring <jan.gehring@gmail.com>  Sun, 13 Feb 2011 23:50:00 +0200

rex (0.1.2) unstable; urgency=low
  * fixed bug with public_key and private_key
  * cleanup of control file
  * cleanup of changelog file
 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 28 Jan 2011 22:20:00 +0200

rex (0.1.1) unstable; urgency=low
  * added remote file edit and read support
 -- Jan Gehring <jan.gehring@gmail.com>  Sat, 22 Jan 2011 01:10:00 +0200

rex (0.1.0) unstable; urgency=low
  * switched to Net::SSH2
  * added remote file edit and read support
 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 21 Jan 2011 20:20:00 +0200

rex (0.0.8) unstable; urgency=low
  * added -M parameter
  * added -F parameter
 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 30 Dec 2010 20:10:00 +0200

rex (0.0.7) unstable; urgency=low