@@ -2,6 +2,8 @@ rex (0.3.0) unstable; urgency=low
   * run commands directly from command line
   * serverranges (group "backend" => "be[01..40]";)
   * ability to call tasks from other tasks
+  * syslogging
+  * logging to a file
   * prepare for 0.3.0
 
  -- Jan Gehring <jan.gehring@gmail.com>  Thu, 22 Mar 2011 19:15:00 +0200
